# vpncon/users/api.py
@@ -1,14 +1,13 @@
-from flask import Blueprint, jsonify, request
+from flask import jsonify, request
 from vpncon.db import auto_transaction
-from .crud import get_user, create_user#, update_user, delete_user
 from .model import User
+from ..users import users_bp, user_service
 
-users_bp = Blueprint('users_api', __name__, url_prefix='/users')
 
 @users_bp.route('/<int:telegram_id>', methods=['GET'])
 @auto_transaction
 def api_get_user(telegram_id:int):
-    user = get_user(telegram_id)
+    user = user_service.get_user(telegram_id)
     if user:
         return jsonify(user)
     return jsonify({'error': 'User not found'}), 404
@@ -17,17 +16,20 @@ def api_get_user(telegram_id:int):
 @auto_transaction
 def api_create_user():
     data = request.json
-    user = User(data.get('telegram_id'), data.get('telegram_nick'), data.get('role'))
-    create_user(user)
+    user_service.create_user(
+        data.get('telegram_id'), data.get('telegram_nick'), data.get('role')
+    )
     return jsonify({'status': 'created'}), 201
 
-# @users_bp.route('/<int:telegram_id>', methods=['PUT'])
-# def api_update_user(telegram_id):
-#     data = request.json
-#     update_user(telegram_id, **data)
-#     return jsonify({'status': 'updated'})
+@users_bp.route('/', methods=['PUT'])
+def api_update_user():
+    data = request.json
+    user_service.update_user(
+        data.get('telegram_id'), data.get('telegram_nick'), data.get('role')
+    )
+    return jsonify({'status': 'updated'})
 
-# @users_bp.route('/<int:telegram_id>', methods=['DELETE'])
-# def api_delete_user(telegram_id):
-#     delete_user(telegram_id)
-#     return jsonify({'status': 'deleted'})
+@users_bp.route('/<int:telegram_id>', methods=['DELETE'])
+def api_delete_user(telegram_id:int):
+    user_service.delete_user(telegram_id)
+    return jsonify({'status': 'deleted'})
